# aes67-linux-daemon

./: .gitattributes  .gitignore  .gitmodules  Dockerfile.daemon_tests  LICENSE_NOTICES.MD  README.md  buildfake.sh  debian-packages.sh  noise-daemonctl.sh  noise-dev.sh  oca-daemonctl.sh  oca-dev.sh  run_latency_test.sh  run_test.sh
.claude/rules/: ai-collaboration.md  build.md  docs.md  fork-maintenance.md  git-workflow.md  skills.md
.github/workflows/: release.yml
daemon/: .clangd  CMakeLists.txt  README.md  config.cpp  config.hpp  daemon.conf  http_server.cpp  http_server.hpp  interface.cpp  json.cpp  main.cpp  noise_session_manager_bridge.cpp  noise_session_manager_bridge.hpp  oca_session_manager_bridge.cpp  oca_session_manager_bridge.hpp  pcm_capture_service.cpp  pcm_capture_service.hpp  rtsp_server.hpp  session_manager.cpp  session_manager.hpp  streamer.cpp  streamer.hpp
daemon/noise/: CMakeLists.txt  audio_capture.cpp  audio_capture.hpp  denoise_plugin.hpp  denoise_plugin_factory.cpp  denoise_plugin_factory.hpp  denoise_processor.cpp  denoise_processor.hpp  fft.hpp  init.cpp  ml_classifier.cpp  ml_classifier.hpp  noise_analyzer.cpp  noise_analyzer.hpp  noise_audio_bridge.hpp  noise_detector.cpp  noise_detector.hpp  noise_http.cpp  noise_http.hpp  noise_manager.cpp  noise_manager.hpp  noise_metrics.cpp  noise_metrics.hpp  noise_metrics_stub.hpp  noise_status.cpp  noise_status.hpp  noise_template_db.cpp  noise_template_db.hpp  onnx_session.cpp  onnx_session.hpp  rcu_ptr.hpp  ref_comparator.cpp  ref_comparator.hpp  resampler.cpp  resampler.hpp  sse_broadcaster.cpp  sse_broadcaster.hpp  stub_processor.cpp  stub_processor.hpp  vad.cpp  (+1 more)
daemon/noise/model-adapters/: passthrough_plugin.cpp  passthrough_plugin.hpp
daemon/noise/model-adapters/deepfilternet/: deepfilternet_adapter.cpp  deepfilternet_adapter.hpp
daemon/noise/model-adapters/dtln/: dtln_adapter.cpp  dtln_adapter.hpp
daemon/noise/model-adapters/rnnoise/: rnnoise_adapter.cpp  rnnoise_adapter.hpp
daemon/noise/tests/: download_models.sh  noise_test.cpp  synth_audio.hpp
daemon/oca/: mdns_publisher.cpp  mdns_publisher.hpp  methods.hpp  object.hpp  oca_audio_bridge.hpp  oca_server.cpp  oca_server.hpp  oca_session_manager_bridge.cpp  oca_session_manager_bridge.hpp  ocp1.cpp  ocp1.hpp  session.cpp  session.hpp  transport.cpp  transport.hpp  types.hpp
daemon/oca/classes/: agent.cpp  agent.hpp  application_network.cpp  application_network.hpp  control_network.cpp  control_network.hpp  device_manager.cpp  device_manager.hpp  media_clock.cpp  media_clock.hpp  media_clock3.cpp  media_clock3.hpp  media_clock_manager.cpp  media_clock_manager.hpp  media_transport_network.cpp  media_transport_network.hpp  media_transport_network_aes67.cpp  media_transport_network_aes67.hpp  network.cpp  network.hpp  network_manager.cpp  network_manager.hpp  root.cpp  root.hpp  subscription_manager.cpp  subscription_manager.hpp
daemon/oca/tests/: oca_test.cpp
daemon/oca/tools/: oca-mitm.py  oca-parse-pcap.py  oca_probe.cpp
daemon/tests/: CMakeLists.txt  daemon.conf  daemon_test.cpp
docs/contracts/http/: openapi.yaml
docs/noise/: architecture-design.md  denoise-plugin-architecture.md  noise-identification-research.md  test-audio-resources.md  噪声比对监测实现说明.docx  相似度分析和噪声分析 .pptx
docs/ops/: aes70-oca-spec1-design.md  channel-allocation-mapping.md  driver-daemon-communication.md  oca-design-and-maintenance.md
docs/superpowers/plans/: aes70-oca-spec1-phase1-plan.md  aes70-oca-spec1-plan.md  aes70-oca-spec2-phase1-plan.md  aes70-oca-spec2-phase2-plan.md  aes70-oca-spec3-phase1-plan.md  aes70-oca-spec3-plan-draft.md  aes70-oca-spec4-phase1-plan.md  aes70-oca-spec5-phase1-plan.md  noise-spec1-plan.md  noise-spec2-plan.md  noise-spec3-plan.md  noise-spec4-plan.md  noise-spec5-plan.md
docs/superpowers/specs/: aes70-oca-spec1-design.md  aes70-oca-spec2-design.md  aes70-oca-spec3-design.md  aes70-oca-spec4-design.md  aes70-oca-spec5-design.md  noise-spec1-design.md  noise-spec2-design.md  noise-spec3-design.md  noise-spec4-design.md  noise-spec5-design.md
systemd/: daemon.conf
test/: daemon.conf
webui/: package-lock.json
webui/src/: Config.jsx  Services.js
